# mars_rover

./: .gitignore  Dockerfile  Dockerfile.test  MIGRATIONS_DOCKER.md  README.md  docker-compose.yml
.github/workflows/: tests.yml
postman/: Mars_Rover_API.postman_collection.json  Mars_Rover_Local.postman_environment.json
src/: conftest.py  docker-entrypoint.sh  main.py  pyproject.toml
src/alembic/: env.py
src/alembic/versions/: 001_initial_migration_create_rovers_table.py  002_fix_rover_id_length.py
src/app/: config.py  containers.py
src/app/domain/: __init__.py  commands.py  direction.py  plateau.py  rover.py
src/app/endpoints/health/: controllers.py
src/app/endpoints/rover/: controllers.py  schemas.py
src/app/infrastructure/: __init__.py  exceptions.py  idatabase.py  logger.py  models.py  postgres_database.py
src/app/repositories/: __init__.py  irepository.py  rover_repository.py  sql_repository.py
src/app/services/: __init__.py  rover_service.py
src/tests/: test_api.py  test_domain.py
